Aliging with PR 21574