@@ -26,57 +26,59 @@
  * @test
  * @bug 8308363 8336406 8339473
  * @summary Verify FP16 unary, binary and ternary operations
- * @compile FP16ScalarOperations.java
- * @run main/othervm --enable-preview -XX:-TieredCompilation -Xbatch FP16ScalarOperations
+ * @modules jdk.incubator.vector
+ * @compile Float16ScalarOperations.java
+ * @run main/othervm -XX:-TieredCompilation -Xbatch Float16ScalarOperations
  */
 
 import java.util.Random;
 import java.util.stream.IntStream;
-import static java.lang.Float16.*;
+import jdk.incubator.vector.Float16;
+import static jdk.incubator.vector.Float16.*;
 
-public class FP16ScalarOperations {
+public class Float16ScalarOperations {
 
     public static final int SIZE = 65504;
     public static Random r = new Random(SIZE);
-    public static final Float16 ONE = Float16.valueOf(1.0);
-    public static final Float16 ZERO = Float16.valueOf(0.0);
+    public static final Float16 ONE = valueOf(1.0);
+    public static final Float16 ZERO = valueOf(0.0);
     public static final int EXP = 0x7c00; // Mask for Float16 Exponent in a NaN (which is all ones)
     public static final int SIGN_BIT = 0x8000; // Mask for sign bit for Float16
 
     public static Float16 actual_value(String oper, Float16... val) {
         switch (oper) {
-            case "abs"        : return Float16.abs(val[0]);
-            case "neg"        : return Float16.negate(val[0]);
-            case "sqrt"       : return Float16.sqrt(val[0]);
-            case "isInfinite" : return Float16.isInfinite(val[0]) ? ONE : ZERO;
-            case "isFinite"   : return Float16.isFinite(val[0]) ? ONE : ZERO;
-            case "isNaN"      : return Float16.isNaN(val[0]) ? ONE : ZERO;
-            case "+"          : return Float16.add(val[0], val[1]);
-            case "-"          : return Float16.subtract(val[0], val[1]);
-            case "*"          : return Float16.multiply(val[0], val[1]);
-            case "/"          : return Float16.divide(val[0], val[1]);
-            case "min"        : return Float16.min(val[0], val[1]);
-            case "max"        : return Float16.max(val[0], val[1]);
-            case "fma"        : return Float16.fma(val[0], val[1], val[2]);
+            case "abs"        : return abs(val[0]);
+            case "neg"        : return negate(val[0]);
+            case "sqrt"       : return sqrt(val[0]);
+            case "isInfinite" : return isInfinite(val[0]) ? ONE : ZERO;
+            case "isFinite"   : return isFinite(val[0]) ? ONE : ZERO;
+            case "isNaN"      : return isNaN(val[0]) ? ONE : ZERO;
+            case "+"          : return add(val[0], val[1]);
+            case "-"          : return subtract(val[0], val[1]);
+            case "*"          : return multiply(val[0], val[1]);
+            case "/"          : return divide(val[0], val[1]);
+            case "min"        : return min(val[0], val[1]);
+            case "max"        : return max(val[0], val[1]);
+            case "fma"        : return fma(val[0], val[1], val[2]);
             default           : throw new AssertionError("Unsupported Operation!");
         }
     }
 
     public static Float16 expected_value(String oper, Float16... val) {
         switch (oper) {
-            case "abs"        : return Float16.valueOf(Math.abs(val[0].floatValue()));
-            case "neg"        : return Float16.shortBitsToFloat16((short)(Float16.float16ToRawShortBits(val[0]) ^ (short)0x0000_8000));
-            case "sqrt"       : return Float16.valueOf(Math.sqrt(val[0].floatValue()));
+            case "abs"        : return valueOf(Math.abs(val[0].floatValue()));
+            case "neg"        : return shortBitsToFloat16((short)(float16ToRawShortBits(val[0]) ^ (short)0x0000_8000));
+            case "sqrt"       : return valueOf(Math.sqrt(val[0].floatValue()));
             case "isInfinite" : return Float.isInfinite(val[0].floatValue()) ? ONE : ZERO;
             case "isFinite"   : return Float.isFinite(val[0].floatValue()) ? ONE : ZERO;
             case "isNaN"      : return Float.isNaN(val[0].floatValue()) ? ONE : ZERO;
-            case "+"          : return Float16.valueOf(val[0].floatValue() + val[1].floatValue());
-            case "-"          : return Float16.valueOf(val[0].floatValue() - val[1].floatValue());
-            case "*"          : return Float16.valueOf(val[0].floatValue() * val[1].floatValue());
-            case "/"          : return Float16.valueOf(val[0].floatValue() / val[1].floatValue());
-            case "min"        : return Float16.valueOf(Float.min(val[0].floatValue(), val[1].floatValue()));
-            case "max"        : return Float16.valueOf(Float.max(val[0].floatValue(), val[1].floatValue()));
-            case "fma"        : return Float16.valueOf(val[0].floatValue() * val[1].floatValue() + val[2].floatValue());
+            case "+"          : return valueOf(val[0].floatValue() + val[1].floatValue());
+            case "-"          : return valueOf(val[0].floatValue() - val[1].floatValue());
+            case "*"          : return valueOf(val[0].floatValue() * val[1].floatValue());
+            case "/"          : return valueOf(val[0].floatValue() / val[1].floatValue());
+            case "min"        : return valueOf(Float.min(val[0].floatValue(), val[1].floatValue()));
+            case "max"        : return valueOf(Float.max(val[0].floatValue(), val[1].floatValue()));
+            case "fma"        : return valueOf(Math.fma(val[0].doubleValue(), val[1].doubleValue(), val[2].doubleValue()));
             default           : throw new AssertionError("Unsupported Operation!");
         }
     }
@@ -90,14 +92,14 @@ public class FP16ScalarOperations {
         if (!actual.equals(expected)) {
             switch (arity) {
                 case 1:
-                    throw new AssertionError("Test Failed: " + oper + "(" + Float16.float16ToRawShortBits(input[0]) + ") : " +  actual + " != " + expected);
+                    throw new AssertionError("Test Failed: " + oper + "(" + float16ToRawShortBits(input[0]) + ") : " + "(actual:" + actual + ") != (" + "expected:" + expected);
                 case 2:
-                    throw new AssertionError("Test Failed: " + oper + "(" + Float16.float16ToRawShortBits(input[0]) + ", " + Float16.float16ToRawShortBits(input[1]) + ") : " + actual + " != " + expected);
+                     throw new AssertionError("Test Failed: " + oper + "(" + float16ToRawShortBits(input[0]) + ", " + float16ToRawShortBits(input[1]) + ") : " + "(actual:" + actual + ") != (" + "expected:" + expected);
                 case 3:
-                    throw new AssertionError("Test failed: " + oper + "(" + Float16.float16ToRawShortBits(input[0]) + ", " + Float16.float16ToRawShortBits(input[1]) + ", " + Float16.float16ToRawShortBits(input[2]) + ") : " + actual + " != " + expected);
+                     throw new AssertionError("Test failed: " + oper + "(" + float16ToRawShortBits(input[0]) + ", " + float16ToRawShortBits(input[1]) + ", " + float16ToRawShortBits(input[2]) + ") : " + "(actual:" + actual + ") != (" + "expected:" + expected);
                 default:
-                    throw new AssertionError("Incorrect operation (" + oper + ")  arity = " + arity);
-            }
+                     throw new AssertionError("Incorrect operation (" + oper + ")  arity = " + arity);
+             }
         }
     }
 
@@ -131,8 +133,8 @@ public class FP16ScalarOperations {
         Float16 pos_nan, neg_nan;
         // Starting from 1 as the significand in a NaN value is always non-zero
         for (int i = 1; i < 0x03ff; i++) {
-            pos_nan = Float16.shortBitsToFloat16((short)(EXP | i));
-            neg_nan = Float16.shortBitsToFloat16((short)(Float16.float16ToRawShortBits(pos_nan) | SIGN_BIT));
+            pos_nan = shortBitsToFloat16((short)(EXP | i));
+            neg_nan = shortBitsToFloat16((short)(float16ToRawShortBits(pos_nan) | SIGN_BIT));
 
             // Test isFinite, isInfinite, isNaN for all positive NaN values
             validate("isInfinite", pos_nan);
@@ -152,16 +154,16 @@ public class FP16ScalarOperations {
         Float16 [] input3 = new Float16[SIZE];
 
         // input1, input2, input3 contain the entire value range for FP16
-        IntStream.range(0, input1.length).forEach(i -> {input1[i] = Float16.valueOf((float)i);});
-        IntStream.range(0, input2.length).forEach(i -> {input2[i] = Float16.valueOf((float)i);});
-        IntStream.range(0, input2.length).forEach(i -> {input3[i] = Float16.valueOf((float)i);});
+        IntStream.range(0, input1.length).forEach(i -> {input1[i] = valueOf((float)i);});
+        IntStream.range(0, input2.length).forEach(i -> {input2[i] = valueOf((float)i);});
+        IntStream.range(0, input2.length).forEach(i -> {input3[i] = valueOf((float)i);});
 
         Float16 [] special_values = {
-              Float16.NaN,                 // NAN
-              Float16.POSITIVE_INFINITY,   // +Inf
-              Float16.NEGATIVE_INFINITY,   // -Inf
-              Float16.valueOf(0.0),        // +0.0
-              Float16.valueOf(-0.0),       // -0.0
+              NaN,                 // NAN
+              POSITIVE_INFINITY,   // +Inf
+              NEGATIVE_INFINITY,   // -Inf
+              valueOf(0.0),        // +0.0
+              valueOf(-0.0),       // -0.0
         };
 
         for (int i = 0;  i < 1000; i++) {
